<resources>
    <string name="app_name">Diversidade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_nucleus">Details</string>
    <string name="title_activity_splash">Diversidade</string>

    <string name="title_toolbar_nucleus">Nucleus</string>
    <string name="title_toolbar_discovery">Discovering Yourself</string>
    <string name="title_toolbar_rights">Rights</string>
    <string name="title_toolbar_health">Health</string>
    <string name="title_toolbar_suggestion">Suggestion of Nucleus</string>
    <string name="title_toolbar_about">About</string>

    <string name="place_tab_informations">Informations</string>
    <string name="place_tab_services">Services</string>
    <string name="place_tab_comments">Comments</string>

    <string name="message_fail_gps">Verify the GPS connection!</string>

    <string name="developer_name_lastname">First name and Last name</string>
    <string name="title_splash">Diversidade</string>
    <string name="slogan_splash">Seja você, seja feliz!</string>
    <string name="developers_text_view">Developers</string>

    <string name="nucleus_name_sug">Name of nucleus or event</string>
    <string name="hint_nucleus_name">Type a name</string>
    <string name="nucleus_address_sug">Address</string>
    <string name="hint_nucleus_address">Street, Number, District</string>
    <string name="nucleus_cep_sug">CEP</string>
    <string name="hint_only_numbers">Only numbers</string>
    <string name="nucleus_state_sug">State</string>
    <string name="hint_nucleus_state">Ex: CE</string>
    <string name="nucleus_country_sug">Country</string>
    <string name="hint_nucleus_country">Name of country</string>
    <string name="nucleus_responsible_sug">Name of responsible person</string>
    <string name="nucleus_phone_sug">Phone number</string>
    <string name="nucleus_email_sug">E-mail</string>
    <string name="hint_nucleus_email">Contact e-mail</string>
    <string name="nucleus_services_sug">Services offered</string>
    <string name="hint_separated_commas">Separated by commas</string>
    <string name="nucleus_button_send">Send</string>

    <string name="title_menu_nav">Diversidade: seja você, seja feliz!</string>
    <string name="title_activity_comment">Write a comment</string>
    <string name="action_send">send_comment</string>
    <string name="readers_review_toolbar_subtitle_plural">caracters</string>
    <string name="readers_review_toolbar_subtitle">caracter</string>
    <string name="title_activity_detail_developer">Developer</string>
    <string name="information_fragment_address_title">Address</string>
    <string name="information_fragment_business_hours">Bussiness hours</string>
    <string name="information_fragment_contacts">Contacts</string>
    <string name="nucleus_responsible">Responsible: </string>
    <string name="nucleus_phone">Phone number:</string>
    <string name="nucleus_email">E-Mail:</string>
    <string name="toast_verify_gps">Verify the GPS connection and try again!</string>
    <string name="progress_dialog_load">Loading...</string>
    <string name="error_server">Sorry, the server didn\'t work. Try again!</string>
    <string name="snippet_marker_message">Click again to meet the organization.</string>
    <string name="toast_any_nucleus">There aren\'t any nucleus in your state yet.</string>
    <string name="progress_dialog_post">Posting...</string>
    <string name="toast_success_post">Comment successfully posted!</string>
    <string name="no_comments">There aren\'t any comments yet.</string>
    <string name="toast_verify_internet">Verify internet connection!</string>
    <string name="nucleus_site">Website:</string>

</resources>
