<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifce.engcomp.francis.diversidade.fragments.SuggestionFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:elevation="50dp"
                android:id="@+id/card"
                android:layout_weight="0.61"
                android:padding="20dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_name_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nucleus_name_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/hint_nucleus_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_address_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/nucleus_address_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/hint_nucleus_address" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_cep_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/nucleus_cep_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/hint_only_numbers" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/nucleus_state_sug"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="6"
                                android:id="@+id/nucleus_estado_edit_text"
                                android:textColor="@color/colorPrimary"
                                android:hint="@string/hint_nucleus_state" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/nucleus_country_sug"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="5dp" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:id="@+id/nucleus_pais_edit_text"
                                android:textColor="@color/colorPrimary"
                                android:hint="@string/hint_nucleus_country" />

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_responsible_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/nucleus_responsavel_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/developer_name_lastname" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_phone_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/nucleus_telefone_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/hint_only_numbers" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_email_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/nucleus_email_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/nucleus_email_sug" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/nucleus_services_sug"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/nucleus_servicos_edit_text"
                        android:textColor="@color/colorPrimary"
                        android:hint="@string/hint_separated_commas" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/background_material_light"
                android:layout_margin="10dp"
                android:text="@string/nucleus_button_send"
                android:id="@+id/enviarButton" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
